[gd_scene load_steps=5 format=3 uid="uid://cysi22suj7qro"]

[ext_resource type="Script" path="res://scripts/levels/level_4.gd" id="1_486ih"]
[ext_resource type="PackedScene" uid="uid://cs6sy82mme6s4" path="res://scenes/ui/zoomies_ui.tscn" id="2_6j1bn"]
[ext_resource type="PackedScene" uid="uid://gi8h4kub3elw" path="res://scenes/cats/random.tscn" id="3_sxiyw"]
[ext_resource type="PackedScene" uid="uid://c4wfxjktfnjdu" path="res://scenes/timer.tscn" id="4_f0fj5"]

[node name="Level4" type="Node2D"]
script = ExtResource("1_486ih")
timer_sec = 30

[node name="ZoomiesUI" parent="." instance=ExtResource("2_6j1bn")]
position = Vector2(-960, -540)

[node name="Cat1" parent="." instance=ExtResource("3_sxiyw")]
position = Vector2(-907, -388)
scale = Vector2(0.3, 0.3)

[node name="Cat2" parent="." instance=ExtResource("3_sxiyw")]
position = Vector2(-285, -388)
scale = Vector2(0.3, 0.3)

[node name="Cat3" parent="." instance=ExtResource("3_sxiyw")]
position = Vector2(343, -388)
scale = Vector2(0.3, 0.3)

[node name="Cat4" parent="." instance=ExtResource("3_sxiyw")]
position = Vector2(-620, -16)
scale = Vector2(0.3, 0.3)

[node name="Cat5" parent="." instance=ExtResource("3_sxiyw")]
position = Vector2(47, -16)
scale = Vector2(0.3, 0.3)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="LevelTimer" parent="." instance=ExtResource("4_f0fj5")]

[connection signal="ready" from="." to="." method="_on_ready"]
